package pers.prover07.dp.creation.factory.abstractfactory.product.drinks;

/**
 * @author 小丶木曾义仲丶哈牛柚子露丶蛋卷
 * @version 1.0
 * @date 2022/5/11 18:36
 */
public class Sprite extends Drinks{
    public Sprite(String name) {
        super(name);
    }
}
